fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html {
 
 
 .lower-bar {
-    margin-top: -2em;
+    margin-top: -4em;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -137,7 +137,7 @@ input[type=text] {
     position: absolute;
     width: auto;
     height: auto;
-    margin-top: -4em;
+    margin-top: -7.2em;
 
 }
 
@@ -146,7 +146,7 @@ input[type=text] {
 }
 
 .info {
-    margin-top: -6.4em;
+    margin-top: -8em;
     align-items: left;
     flex-direction: column;
     width: 100%;
